[package]
name = "live"
version = "0.1.0"
edition = "2021"

# we want to build as a .dll
[lib]
crate-type = ["cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
egui = "0.24.1"
egui_gl_hook = { path = "egui_gl_hook" }
geometrydash = "0.2.1"
kittyaudio =  { git = "https://github.com/zeozeozeo/kittyaudio" }
log = "0.4.20"
once_cell = "1.18.0"
rand = "0.8.5"
retour = { version = "0.3.1", features = ["static-detour"] }
simple_logger = "4.3.0"
windows = { version = "0.52.0", features = ["Win32_System_Threading",
                                            "Win32_Foundation",
                                            "Win32_Security",
                                            "Win32_System_Console",
                                            "Win32_UI_WindowsAndMessaging",
                                            "Win32_Graphics",
                                            "Win32_Graphics_Gdi"] }
