[package]
name = "live"
version = "0.2.1"
edition = "2021"
build = "build.rs"

# we want to build as a .dll
[lib]
crate-type = ["cdylib"]

[profile.release]
lto = "fat"
codegen-units = 1
strip = true

[workspace]
members = [".", "egui_gl_hook", "egui-opengl-internal"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
egui = "0.25.0"
egui-keybind = { version = "0.2.5", features = ["serde"] }
egui-modal = "0.3.2"
egui-toast = "0.11.0"
egui_gl_hook = { path = "egui_gl_hook" }
egui-opengl-internal = { path = "egui-opengl-internal" }
# geometrydash = { path = "../../geometrydash" }
kittyaudio = { git = "https://github.com/zeozeozeo/kittyaudio.git" }
log = "0.4.20"
once_cell = "1.18.0"
rand = "0.8.5"
retour = { version = "0.3.1", features = ["static-detour"] }
rfd = "0.13.0"
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
simple_logger = "4.3.0"
minhook = { git = "https://github.com/zeozeozeo/minhook.git", branch = "minhook-v1.3.3-hj" }
windows = { version = "0.52.0", features = ["Win32_System_Threading",
                                            "Win32_Foundation",
                                            "Win32_Security",
                                            "Win32_System_Console",
                                            "Win32_UI_WindowsAndMessaging",
                                            "Win32_Graphics",
                                            "Win32_Graphics_Gdi",
                                            "Win32_System_Diagnostics",
                                            "Win32_System_Memory",
                                            "Win32_System_Diagnostics_Debug"] }

[build-dependencies]
built = "0.7.1"

[features]
default = ["22"]
special = []
22 = []
